update JDK to 21